css/style.css
/* ... */
#thumbnails   .nothumb_inner {font-size:16pt;margin:0px 0px;border: 0px solid #333;vertical-align:center;height:80px;}

#thumbnails span {/*margin: 0px;*/
                  padding: 0px;
                  /*border: 0px solid #333;/*1*/
                  text-align: center;
                  color: #fff;
                  /*float: left;*/
                  font-size: 8pt;
                  /*background-image: url(../images/shadow.png);*/
                  /*height:120px;*/}

#thumbnails span a {font-size: 8pt;
                    color: #fff;
                    text-shadow: 1px 1px 2px #333, -1px 1px 2px #333, 1px -1px 2px #333, -1px -1px 2px #333; 
                    /*text-decoration: none;*/
                    color: #fff;}

/*#thumbnails div span {border: 1px solid #f47c0e;}*/

#thumbnails img {margin-bottom: .25em;}
#thumbnails a:link        {color: #fff;}
/*#thumbnails a:link    img {border: 0px solid #bdf;}*/
#thumbnails a:visited     {color: #fff;}
/*#thumbnails a:visited img {border: 0px solid #777;}*/
#thumbnails a:hover       {color: #ccc; /*#f47c0e;*/}
/*#thumbnails a:hover   img {border: 0px solid #f47c0e;}*/

/*.playbutton {border: 0px;} 
a:link    .playbutton {border: 0px;}
a:visited .playbutton {border: 0px;}
a:hover   .playbutton {border: 0px;}*/

#thumbnailstable {/*width:1180px;*/
                  margin-left: 0px;
                  margin-right: 0px;
                  border: 0px solid #555;}

/*#thumbnailstable div {border: 1px solid #eee;}
table#thumbnailstable div {border: 1px solid #eee;}
#thumbnailstable tbody tr td span a div {border: 1px solid #eee;}*/

#thumbnails a:link img.missing  {color:#ccc;border:0px solid red;}
#thumbnails a:link img.normal   {color:#ccc;border:0px solid white; margin: 0px;}
#thumbnails a:link img.nothumb  {color:#ccc;border:0px solid orange;margin: 0px;}
#thumbnails a:link img.folder   {color:#ccc;border:none; margin: 2px 2px 2px 2px;width: 54px; height: 52px;padding-top:25px;}
#thumbnails a:link img.html     {color:#ccc;border:none; margin: 2px 2px 2px 2px;width: 54px; height: 52px;padding-top:25px;}
#thumbnails a:link img.file     {color:#ccc;border:none; margin: 2px 2px 2px 2px;width: 54px; height: 52px;padding-top:25px;}
#thumbnails a:link img.python   {color:#ccc;border:none; margin: 2px 2px 2px 2px;width: 54px; height: 52px;padding-top:25px;}
#thumbnails a:link img.movie    {color:#ccc;border:none; margin: 2px 2px 2px 2px;width: 54px; height: 52px;padding-top:25px;}
#thumbnails a:link img.moviethm {color:#ccc;border:0px solid #fff; margin: 0px;} /*height:%dpx" ' % thumbsize*/

#pagenavigation a.yearmonth {color: #aaa;}

.spanBase {border: 0px solid #fff;
             text-shadow: 1px 1px 2px #333, -1px 1px 2px #333, 1px -1px 2px #333, -1px -1px 2px #333; 
}
.spanDirDiv {border: 1px solid #f77; margin-left: 0px; margin-right:0px; white-space: nowrap}
.spanDirDivNoBorder {border: 0px solid #fff; margin-left: 0px; margin-right: 0px;}
.spanDirFormat {padding: 0px 0px; display: table-cell; vertical-align: middle; color: #ddd;
                font: 175% arial; text-align: center;}
.spanLogoMovieDiv {margin-right: 2px; 
                   margin-bottom: -17px;
                   text-shadow: 1px 1px 2px #333, -1px 1px 2px #333, 1px -1px 2px #333, -1px -1px 2px #333; 
                   color: #ddd; font-size: 100%;}
                   overflow: hidden;}
.spanLogoMovieImage {border: 1px solid #f77;}
/*img.spanLogoMovieImage:hover {opacity: 0.4;}*/

.spanLogo a {overflow: hidden; }

a:link    .spanDirDivDiv {background-color: #000;} 
a:visited .spanDirDivDiv {background-color: #400;} 
a:hover   .spanDirDivDiv {background-color: #522;} 

.center-div { margin: 0 auto; /*width: 100px;*/ }

.alphabet9  {font-family:DeJaVuSans;font-size:9pt;white-space:nowrap; word-spacing:em;}
.alphabet10 {font-family:DeJaVuSans;font-size:10pt;white-space:nowrap; word-spacing:em;}

.gallery {padding: 0px;}

.standard {padding-top: 25px}

.separator {clear: both}

.topblurb    {font-size:16pt;
              margin-top: 0px;}
.blurb       {font-size: 8pt;}
.bottomblurb {font-size: 8pt;
              margin-bottom: 0px;}

.wplink {text-transform: uppercase;
         cursor: pointer;
         color: #ff0000;
         margin: 3px;}

.wplink a:link    {color: #f00;}
.wplink a:visited {color: #f00;}
.wplink a:hover   {color: #f47c0e;}

#rollover {overflow: hidden; height:120px; margin-bottom:-16px;}
img.rollover {margin-top:0px; overflow:hidden;}
img.rollover:hover {margin-top:-120px; overflow:hidden;}

.rollover2 {display:none;}
.rollover2:hover {display:block;}

.caption_offset { margin-top: -40px;}
.caption_format { text-shadow: 1px 1px 2px #333, -1px 1px 2px #333, 1px -1px 2px #333, -1px -1px 2px #333; 
                  color: #ddd; font-size: 160%;}
.caption_format_sm { text-shadow: 1px 1px 2px #333, -1px 1px 2px #333, 1px -1px 2px #333, -1px -1px 2px #333; 
                  color: #ddd; font-size: 120%;}

#configuration {text-align: center;
                margin: 0px 0px 0px 0px;
                padding: 5px 0px 0px 0px;
                line-height: 120%;}

#configuration select {font-size: 8pt;
                       text-decoration: none;
                       border: 0px solid #fff;
                       margin: 0px 0px 0px 0px;
                       padding: 0px 0px 0px 0px;
                       color: #fff;
                       background-color: #000;}

#configuration option {border: 0px solid #fff;
                       color: #fff;
                       background-color: #000;}

#configuration a:link        {color: #fff;}
#configuration a:link    img {border: 1px solid #fff;}
#configuration a:visited     {color: #fff;}
#configuration a:visited img {border: 1px solid #fff;}
#configuration a:hover       {color: #f47c0e;}
#configuration a:hover   img {border: 1px solid #f47c0e;}

/*  P H O T O   P A G E */

.phototitle {
        color: #fff;
}
/* ... */

